--- a/explanatory.ini
+++ b/explanatory.ini
@@ -288,9 +288,9 @@ they would slow down the code considerably.
 Can be left blank if you do not want to evolve cosmological perturbations at
 all. (default: set to blanck, no perturbation calculation)
 
-output = tCl,pCl,lCl
+#output = tCl,pCl,lCl
 #output = tCl,pCl,lCl,mPk
-#output = mPk,mTk
+output = mPk,mTk
 
 1.b) if you included 'tCl' in the list, you can take into account only some of
      the terms contributing to the temperature spectrum: intrinsic temperature
@@ -345,7 +345,8 @@ modes = s
    spectrum of lensed Cls, enter a word containing the letter 'y' or 'Y'
    (default: no lensed Cls)
 
-lensing = yes
+lensing = no
+#lensing = yes
 
 6) which perturbations should be included in tensor calculations? write 'exact'
    to include photons, ultra-relativistic species 'ur' and all non-cold dark
