--- a/output/explanatory00_parameters.ini
+++ b/output/explanatory00_parameters.ini
@@ -1,6 +1,6 @@
 # List of input/precision parameters actually read
 # (all other parameters set to default values)
-# Obtained with CLASS v2.4.1 (for developpers: svn version 6142M)
+# Obtained with CLASS v2.4.2 (for developpers: svn version 6142M)
 #
 # This file can be used as the input file of another run
 #
@@ -32,9 +32,9 @@ annihilation_f_halo = 20
 annihilation_z_halo = 8
 on the spot = yes
 decay = 0.
-output = tCl,pCl,lCl
+output = mPk,mTk
 modes = s
-lensing = yes
+lensing = no
 ic = ad
 gauge = synchronous
 P_k_ini type = analytic_Pk
@@ -42,7 +42,8 @@ k_pivot = 0.05
 A_s = 2.215e-9
 n_s = 0.9619
 alpha_s = 0.
-l_max_scalars = 2500
+P_k_max_h/Mpc = 1.
+z_pk = 0
 headers = yes
 format = class
 write background = no
